syntax = "proto3";

package integrations;

option go_package = "github.com/dehwyy/mafuyu/libs/grpc/gen/api";

service IntegrationsRpc {
  rpc GetBasicUser(GetBasicUserRequest) returns (GetBasicUserResponse);
}

message GetBasicUserRequest {
  string provider = 1;
  string access_token = 2;
}

message GetBasicUserResponse {
  string provider_id = 1;
  string username = 2;
  optional string email = 3;
  optional string picture = 4;
}