syntax = "proto3";

package user;

option go_package = "github.com/dehwyy/makoto/libs/grpc/generated/user";

import "google/protobuf/empty.proto";

service UserRpc {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc EditUser(EditUserRequest) returns (google.protobuf.Empty);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string user_id = 1;
  optional string picture = 2;
}

message EditUserRequest {
  string user_id = 1;
  optional string location = 2;
  optional uint64 birthday = 3;
  optional string pseudonym = 4;
  optional string bio = 5;
  optional string picture = 6;
  repeated string languages = 7;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  string user_id = 1;
  string username = 2;
  optional string location = 3;
  optional uint32 birthday = 4;
  optional string pseudonym = 5;
  optional string bio = 6;
  optional string picture = 7;
  repeated string languages = 8;

  repeated string friends = 9;
  repeated string followers = 10;
}

message GetUserPostsResponse {
  message Post {
    string post_id = 2;
    string author_id = 3;
    string author_name = 4;
    uint32 likes = 5;
    uint32 comments = 6;
    uint32 views = 7;
    uint64 timestamp = 8;
  }

  repeated Post posts = 1;
}